config-root/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wordpress-gw
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wp-virtualsvc
spec:
  hosts:
  - "*"
  gateways:
  - wordpress-gw
  http:
  - match:
    - uri:
        prefix: "/"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: wordpress.wp.svc.cluster.local
        port:
          number: 80
---
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: wp-auth-policy
  namespace: wp
spec:
  mtls:
    mode: STRICT
---
## apiVersion: mesh.cloud.google.com/v1alpha1
## kind: ControlPlaneRevision
## metadata:
##   name: asm-managed
##   namespace: istio-system
##   labels:
##     mesh.cloud.google.com/managed-cni-enabled: "true"
## spec:
##   type: managed_service
##   channel: asm-managed
